--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^3.10.1",
+    "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
