--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-transformer-yaml": "^3.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
